added test code

--- a/notebooks/view_gt.ipynb
+++ b/notebooks/view_gt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,13 @@
     "\n",
     "# select from a split and image id\n",
     "image_id = '0313-2-42040'\n",
+    "split = 'train'\n",
+    "\n",
+    "# image_id = '0601-1494453391651120722'\n",
+    "# split = 'test'\n",
+    "\n",
     "json_mt = json.load(open(meta_file))\n",
-    "gt_img = json_mt['train'][image_id]"
+    "gt_img = json_mt[split][image_id]"
    ]
   },
   {
@@ -72,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -89,11 +94,11 @@
    "source": [
     "raw_file = os.path.join(data_dir, gt_img['raw_file'])\n",
     "\n",
-    "img = plt.imread(raw_file)\n",
+    "#img = plt.imread(raw_file)\n",
     "\n",
     "#this will get the same result with plt.imread\n",
-    "#img = cv2.imread(raw_file)\n",
-    "#img = cv2.cvtColor(img_cv, cv2.COLOR_BGR2RGB)\n",
+    "img = cv2.imread(raw_file)\n",
+    "img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "w = img.shape[1]\n",
     "h = img.shape[0]\n",
@@ -117,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,129 +255,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[(226, 96),\n",
-       "  (221, 99),\n",
-       "  (216, 103),\n",
-       "  (212, 106),\n",
-       "  (207, 110),\n",
-       "  (202, 113),\n",
-       "  (198, 117),\n",
-       "  (193, 120),\n",
-       "  (189, 124),\n",
-       "  (184, 128),\n",
-       "  (180, 131),\n",
-       "  (175, 135),\n",
-       "  (170, 138),\n",
-       "  (166, 142),\n",
-       "  (161, 145),\n",
-       "  (156, 149),\n",
-       "  (152, 152),\n",
-       "  (147, 156),\n",
-       "  (142, 160),\n",
-       "  (138, 163),\n",
-       "  (133, 167),\n",
-       "  (129, 170),\n",
-       "  (124, 174),\n",
-       "  (120, 177),\n",
-       "  (115, 181),\n",
-       "  (110, 184),\n",
-       "  (106, 188),\n",
-       "  (101, 192),\n",
-       "  (96, 195),\n",
-       "  (92, 199),\n",
-       "  (87, 202),\n",
-       "  (83, 206),\n",
-       "  (78, 209),\n",
-       "  (74, 213),\n",
-       "  (69, 216),\n",
-       "  (64, 220),\n",
-       "  (60, 224),\n",
-       "  (55, 227),\n",
-       "  (50, 231),\n",
-       "  (46, 234),\n",
-       "  (41, 238),\n",
-       "  (36, 241),\n",
-       "  (32, 245),\n",
-       "  (27, 248),\n",
-       "  (23, 252)],\n",
-       " [(254, 96),\n",
-       "  (258, 99),\n",
-       "  (262, 103),\n",
-       "  (267, 106),\n",
-       "  (271, 110),\n",
-       "  (275, 113),\n",
-       "  (279, 117),\n",
-       "  (283, 120),\n",
-       "  (287, 124),\n",
-       "  (291, 128),\n",
-       "  (295, 131),\n",
-       "  (299, 135),\n",
-       "  (304, 138),\n",
-       "  (308, 142),\n",
-       "  (312, 145),\n",
-       "  (316, 149),\n",
-       "  (320, 152),\n",
-       "  (324, 156),\n",
-       "  (328, 160),\n",
-       "  (332, 163),\n",
-       "  (336, 167),\n",
-       "  (340, 170),\n",
-       "  (344, 174),\n",
-       "  (348, 177),\n",
-       "  (352, 181),\n",
-       "  (356, 184),\n",
-       "  (360, 188),\n",
-       "  (365, 192),\n",
-       "  (369, 195),\n",
-       "  (373, 199),\n",
-       "  (377, 202),\n",
-       "  (381, 206),\n",
-       "  (385, 209),\n",
-       "  (389, 213),\n",
-       "  (393, 216),\n",
-       "  (397, 220),\n",
-       "  (402, 224),\n",
-       "  (406, 227),\n",
-       "  (410, 231),\n",
-       "  (414, 234),\n",
-       "  (418, 238),\n",
-       "  (422, 241),\n",
-       "  (426, 245),\n",
-       "  (430, 248),\n",
-       "  (434, 252)],\n",
-       " [(198, 96),\n",
-       "  (186, 99),\n",
-       "  (174, 103),\n",
-       "  (162, 106),\n",
-       "  (149, 110),\n",
-       "  (137, 113),\n",
-       "  (125, 117),\n",
-       "  (112, 120),\n",
-       "  (100, 124),\n",
-       "  (88, 128),\n",
-       "  (76, 131),\n",
-       "  (63, 135),\n",
-       "  (51, 138),\n",
-       "  (39, 142),\n",
-       "  (26, 145),\n",
-       "  (14, 149),\n",
-       "  (2, 152)],\n",
-       " [(288, 92)]]"
+       "[(254, 96),\n",
+       " (258, 99),\n",
+       " (262, 103),\n",
+       " (267, 106),\n",
+       " (271, 110),\n",
+       " (275, 113),\n",
+       " (279, 117),\n",
+       " (283, 120),\n",
+       " (287, 124),\n",
+       " (291, 128),\n",
+       " (295, 131),\n",
+       " (299, 135),\n",
+       " (304, 138),\n",
+       " (308, 142),\n",
+       " (312, 145),\n",
+       " (316, 149),\n",
+       " (320, 152),\n",
+       " (324, 156),\n",
+       " (328, 160),\n",
+       " (332, 163),\n",
+       " (336, 167),\n",
+       " (340, 170),\n",
+       " (344, 174),\n",
+       " (348, 177),\n",
+       " (352, 181),\n",
+       " (356, 184),\n",
+       " (360, 188),\n",
+       " (365, 192),\n",
+       " (369, 195),\n",
+       " (373, 199),\n",
+       " (377, 202),\n",
+       " (381, 206),\n",
+       " (385, 209),\n",
+       " (389, 213),\n",
+       " (393, 216),\n",
+       " (397, 220),\n",
+       " (402, 224),\n",
+       " (406, 227),\n",
+       " (410, 231),\n",
+       " (414, 234),\n",
+       " (418, 238),\n",
+       " (422, 241),\n",
+       " (426, 245),\n",
+       " (430, 248),\n",
+       " (434, 252)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gt_lanes_vis"
+    "gt_lanes_vis[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(256, 512, 3)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape"
    ]
   },
   {
